# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1236 2013/03/25 00:36:14 zmedico Exp $

  25 Mar 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.58.ebuild,
  portage-2.2.0_alpha169.ebuild, portage-9999.ebuild:
  Don't use -OO for compiling modules, since it breaks emaint.

  25 Mar 2013; Zac Medico <zmedico@gentoo.org> portage-2.1.11.58.ebuild,
  portage-2.2.0_alpha169.ebuild, portage-9999.ebuild:
  Compile /usr/lib/portage/pym with the active interpreter, since portage
  internal commands force this directory to the beginning of sys.path.

  24 Mar 2013; Markus Meier <maekke@gentoo.org> portage-2.1.11.55.ebuild:
  arm stable, bug #462134

  23 Mar 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.50.ebuild,
  -portage-2.1.11.57.ebuild, -portage-2.2.0_alpha163.ebuild,
  -portage-2.2.0_alpha168.ebuild:
  Remove old versions.

*portage-2.2.0_alpha169 (22 Mar 2013)

  22 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha169.ebuild:
  2.2.0_alpha169 version bump. This includes all of the fixes in 2.1.11.58. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.58 (22 Mar 2013)

  22 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.58.ebuild:
  2.1.11.58 version bump. This fixes bug #462528 (emerge AttributeError during
  merge list display when PORTDIR is missing) and also adds support for
  PYTHON_TARGETS (instead of PYTHONPATH setting via env.d). Bug #462382 tracks
  all bugs fixed since portage-2.1.11.55.

  21 Mar 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Add experimental PYTHON_TARGETS support (instead of setting PYTHONPATH via
  /etc/env.d).

  20 Mar 2013; Jeroen Roovers <jer@gentoo.org> portage-2.1.11.55.ebuild:
  Stable for HPPA (bug #462134).

*portage-2.2.0_alpha168 (20 Mar 2013)

  20 Mar 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha168.ebuild,