@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.72 2013/03/25 00:36:14 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.73 2013/03/26 05:17:45 zmedico Exp $
 
 EAPI=3
 PYTHON_COMPAT=(
@@ -8,7 +8,7 @@ PYTHON_COMPAT=(
 	python3_1 python3_2 python3_3 python3_4
 	python2_6 python2_7
 )
-inherit git-2 eutils multilib python
+inherit git-2 eutils multilib
 
 DESCRIPTION="Portage is the package management and distribution system for Gentoo"
 HOMEPAGE="http://www.gentoo.org/proj/en/portage/index.xml"
@@ -106,6 +106,37 @@ current_python_has_xattr() {
 	"${PYTHON}" -c 'import xattr' 2>/dev/null
 }
 
+call_with_python_impl() {
+	[[ ${EPYTHON} ]] || die 'No Python implementation set (EPYTHON is null).'
+	env EPYTHON=${EPYTHON} "$@"
+}
+
+get_python_interpreter() {
+	[ $# -eq 1 ] || die "expected 1 argument, got $#: $*"
+	local impl=$1 python
+	case "${impl}" in
+		python*)
+			python=${impl/_/.}
+			;;
+		pypy*)
+			python=${impl/_/.}
+			python=${python/pypy/pypy-c}
+			;;
+		*)
+			die "Unrecognized python target: ${impl}"
+	esac
+	echo ${python}
+}
+
+get_python_sitedir() {
+	[ $# -eq 1 ] || die "expected 1 argument, got $#: $*"
+	local impl=$1
+	local site_dir=/usr/$(get_libdir)/${impl/_/.}/site-packages
+	[[ -d ${EROOT}${site_dir} ]] || \
+		ewarn "site-packages dir missing for ${impl}: ${EROOT}${site_dir}"
+	echo "${site_dir}"
+}
+
 python_compileall() {
 	[[ ${EPYTHON} ]] || die 'No Python implementation set (EPYTHON is null).'
 	local d=${EPREFIX}$1 PYTHON=${EPREFIX}/usr/bin/${EPYTHON}
@@ -160,15 +191,16 @@ pkg_setup() {
 		fi
 	fi
 
+	# We use EPYTHON to designate the active python interpreter,
+	# but we only export when needed, via call_with_python_impl.
+	EPYTHON=python
+	export -n EPYTHON
 	if use python3; then
-		python_set_active_version 3
+		EPYTHON=python3
 	elif use python2; then
-		python_set_active_version 2
+		EPYTHON=python2
 	elif use pypy2_0; then
-		python_set_active_version 2.7-pypy-2.0
-	else
-		# Used by python_compileall and current_python_has_xattr
-		EPYTHON=python
+		EPYTHON=pypy-c2.0
 	fi
 }
 
@@ -204,15 +236,23 @@ src_prepare() {
 			|| die "failed to append to make.globals"
 	fi
 
+	local set_shebang=
 	if use python3; then
-		einfo "Converting shebangs for python3..."
-		python_convert_shebangs -r 3 .
+		set_shebang=python3
 	elif use python2; then
-		einfo "Converting shebangs for python2..."
-		python_convert_shebangs -r 2 .
+		set_shebang=python2
 	elif use pypy2_0; then
-		einfo "Converting shebangs for pypy-c2.0..."
-		python_convert_shebangs -r 2.7-pypy-2.0 .
+		set_shebang=pypy-c2.0
+	fi
+	if [[ -n ${set_shebang} ]] ; then
+		einfo "Converting shebangs for ${set_shebang}..."
+		while read -r -d $'\0' ; do
+			local shebang=$(head -n1 "$REPLY")
+			if [[ ${shebang} == "#!/usr/bin/python"* ]] ; then
+				sed -i -e "1s:python:${set_shebang}:" "$REPLY" || \
+					die "sed failed"
+			fi
+		done < <(find . -type f -print0)
 	fi
 
 	if [[ -n ${EPREFIX} ]] ; then
@@ -227,14 +267,13 @@ src_prepare() {
 			die "Failed to patch portage.const.EPREFIX"
 
 		einfo "Prefixing shebangs ..."
-		find . -type f -print0 | \
 		while read -r -d $'\0' ; do
 			local shebang=$(head -n1 "$REPLY")
 			if [[ ${shebang} == "#!"* && ! ${shebang} == "#!${EPREFIX}/"* ]] ; then
 				sed -i -e "1s:.*:#!${EPREFIX}${shebang:2}:" "$REPLY" || \
 					die "sed failed"
 			fi
-		done
+		done < <(find . -type f -print0)
 
 		einfo "Adjusting make.globals ..."
 		sed -e 's|^SYNC=.*|SYNC="rsync://rsync.prefix.freens.org/gentoo-portage-prefix"|' \
@@ -264,11 +303,13 @@ src_prepare() {
 
 src_compile() {
 	if use doc; then
+		call_with_python_impl \
 		emake docbook || die
 	fi
 
 	if use epydoc; then
 		einfo "Generating api docs"
+		call_with_python_impl \
 		emake epydoc || die
 	fi
 }
@@ -278,6 +319,7 @@ src_test() {
 }
 
 src_install() {
+	call_with_python_impl \
 	emake DESTDIR="${D}" \
 		sysconfdir="${EPREFIX}/etc" \
 		prefix="${EPREFIX}/usr" \
@@ -294,13 +336,13 @@ src_install() {
 	for impl in "${PYTHON_COMPAT[@]}" ; do
 		use "python_targets_${impl}" || continue
 		while read -r mod_dir ; do
-			cd "${S}/pym/${mod_dir}" || die
+			cd "${ED}/usr/lib/portage/pym/${mod_dir}" || die
 			files=$(echo *.py)
 			if [ -z "${files}" ] || [ "${files}" = "*.py" ]; then
 				# __pycache__ directories contain no py files
 				continue
 			fi
-			dest_mod_dir=/usr/$(get_libdir)/${impl/_/.}/site-packages/${mod_dir}
+			dest_mod_dir=$(get_python_sitedir ${impl})/${mod_dir}
 			dodir "${dest_mod_dir}" || die
 			relative_path=../../../lib/portage/pym/${mod_dir}
 			x=/${mod_dir}
@@ -313,18 +355,9 @@ src_install() {
 					"${dest_mod_dir}/${x}" || die
 			done
 		done < <(cd "${ED}"/usr/lib/portage/pym || die ; find * -type d ! -path "portage/tests*")
-		case "${impl}" in
-			python*)
-				python=${impl/_/.}
-				;;
-			pypy*)
-				python=${impl/_/.}
-				python=${python/pypy/pypy-c}
-				;;
-			*)
-				die "Unrecognized python target: ${impl}"
-		esac
-		EPYTHON=${python} python_compileall /usr/$(get_libdir)/${impl/_/.}/site-packages
+		cd "${S}" || die
+		EPYTHON=$(get_python_interpreter ${impl}) \
+		python_compileall "$(get_python_sitedir ${impl})"
 	done
 
 	# Compile /usr/lib/portage/pym with the active interpreter, since portage
@@ -386,8 +419,4 @@ pkg_postinst() {
 			fi
 		done
 	fi
-}
-
-pkg_postrm() {
-	python_mod_cleanup /usr/lib/portage/pym
 }
